@@ -2,6 +2,8 @@
 # $Id$
 mm-dd-yy - Version 5.1.39
 
+  - Fix for Bug#56479 (16738378), getTimestamp throws exception.
+
   - Fix for Bug#79598 (22352812), Client side Prepared Statement caching bypasses JDBC42 Java 8 Time conversion.
 
   - Fix for Bug#77171 (21181466), On every connect getting sql_mode from server creates unnecessary exception.
